flux/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-external
  namespace: gateways
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  addresses:
    - type: NamedAddress
      value: REPLACE_ME_GATEWAY_STATIC_IP_NAME
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: REPLACE_ME_GATEWAY_HOSTNAME
      allowedRoutes:
        namespaces:
          from: All
